<resources>
    <string name="app_name">Avengers</string>
    <string name="mobile_number">Enter your mobile number</string>
    <string name="password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register_yourself">Register Yourself ?</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>